--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+	font-family: Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif,Raleway,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen;
+	font-size: 18px;
+	background-color: #FFF2F2;
+  margin: 0px;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+}
