Create reset password page

--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,9 +1,9 @@
-<div class="login-form">
-  <h1>Login Form</h1>
-  <form action="/auth/signin" method="POST">
+<div class="reset-password-form">
+  <h1>Reset Password Form</h1>
+  <form action="/auth/reset-password" method="POST">
     <input type="text" name="username" placeholder="Username" required>
+    <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
     <input type="submit">
   </form>
-  <a href="/reset-password"><p class="reset">Reset Password</p></a>
 </div>
