--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -9,3 +9,12 @@ footer {
 	align-items: center;
 	padding: 1vh 15%;
 }
+
+footer a {
+	text-decoration: none;
+	color: white;
+}
+
+footer a:hover {
+	color: #0D4C92;
+}
