--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,26 +1,34 @@
 .login-form {
-	width: 300px;
+	width: 400px;
 	margin: 0 auto;
-	padding: 10%;
+	padding: 5%;
 }
 
-.login-form h1 {
+h1 {
 	text-align: center;
 	padding: 20px 0 20px 0;
 }
 
-.login-form input[type="password"],
-.login-form input[type="text"] {
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 0.9rem;
+}
+
+input[type="password"],
+input[type="text"] {
 	width: 100%;
 	padding: 15px;
 	border: 1px solid #7286D3;
-	margin-bottom: 15px;
 	box-sizing:border-box;
 }
 
-.login-form input[type="submit"] {
+input[type="submit"] {
 	width: 100%;
 	padding: 15px;
+  margin-top: 15px;
 	background-color: #7286D3;
 	border: 0;
 	box-sizing: border-box;
@@ -32,4 +40,12 @@
 	text-align: end;
 	font-size: 0.8rem;
 	margin-top: 10px;
+}
+
+.alert {
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: red;
 }
