--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,55 @@
 <div class="login-form">
   <h1>Login Form</h1>
-  <form action="/auth/signin" method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="submit">
+  <form
+    name="form"
+    (ngSubmit)="f.form.valid && onSubmit()"
+    #f="ngForm"
+    novalidate
+  >
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        name="username"
+        placeholder="Username"
+        [(ngModel)]="credentials.username"
+        required
+        #username="ngModel"
+      />
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="f.submitted && username.invalid"
+      >
+        <p *ngIf="password.hasError('required')">Username is required!</p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input
+        type="password"
+        name="password"
+        placeholder="Password"
+        [(ngModel)]="credentials.password"
+        required
+        #password="ngModel"
+      />
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="f.submitted && password.invalid"
+      >
+        <p *ngIf="password.hasError('required')">Password is required</p>
+      </div>
+    </div>
+    <input type="submit" />
+    <div
+      class="alert alert-danger"
+      role="alert"
+      *ngIf="error"
+    >
+      <p>{{error}}</p>
+    </div>
   </form>
   <a href="/reset-password"><p class="reset">Reset Password</p></a>
 </div>
