--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -1,9 +1,74 @@
 <div class="reset-password-form">
   <h1>Reset Password Form</h1>
-  <form action="/auth/reset-password" method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <input type="password" name="password" placeholder="Password" required>
-    <input type="submit">
+  <form
+    name="form"
+    (ngSubmit)="f.form.valid && onSubmit()"
+    #f="ngForm"
+    novalidate
+  >
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input
+        type="text"
+        name="username"
+        placeholder="Username"
+        [(ngModel)]="credentials.username"
+        required
+        #username="ngModel"
+      />
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="f.submitted && username.invalid"
+      >
+        <p *ngIf="username.hasError('required')">Username is required!</p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input
+        type="email"
+        name="email"
+        placeholder="Email"
+        [(ngModel)]="credentials.email"
+        required
+        email
+        #email="ngModel"
+      />
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="f.submitted && email.invalid"
+      >
+        <p *ngIf="email.hasError('required')">Email is required!</p>
+        <p *ngIf="email.errors?.['email']">Email is incorrect!</p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">New Password</label>
+      <input
+        type="password"
+        name="password"
+        placeholder="New Password"
+        [(ngModel)]="credentials.password"
+        required
+        #password="ngModel"
+      />
+      <div
+        class="alert alert-danger"
+        role="alert"
+        *ngIf="f.submitted && password.invalid"
+      >
+        <p *ngIf="password.hasError('required')">Password is required</p>
+      </div>
+    </div>
+    <input type="submit" />
+    <div
+      class="alert alert-danger"
+      role="alert"
+      *ngIf="error"
+    >
+      <p>{{error}}</p>
+    </div>
   </form>
 </div>
