--- a/src/app/reset-password/reset-password.component.css
+++ b/src/app/reset-password/reset-password.component.css
@@ -1,27 +1,35 @@
 .reset-password-form {
-	width: 500px;
+	width: 400px;
 	margin: 0 auto;
 	padding: 5%;
 }
 
-.reset-password-form h1 {
+h1 {
 	text-align: center;
 	padding: 20px 0 20px 0;
 }
 
-.reset-password-form input[type="password"],
-.reset-password-form input[type="text"],
-.reset-password-form input[type="email"] {
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 0.9rem;
+}
+
+input[type="password"],
+input[type="text"],
+input[type="email"] {
 	width: 100%;
 	padding: 15px;
 	border: 1px solid #7286D3;
-	margin-bottom: 15px;
 	box-sizing:border-box;
 }
 
-.reset-password-form input[type="submit"] {
+input[type="submit"] {
 	width: 100%;
 	padding: 15px;
+  margin-top: 15px;
 	background-color: #7286D3;
 	border: 0;
 	box-sizing: border-box;
@@ -33,4 +41,12 @@
 	text-align: end;
 	font-size: 0.8rem;
 	margin-top: 10px;
+}
+
+.alert {
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: red;
 }
