Create employee page

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -10,7 +10,7 @@
       </div>
       <div>
         <h2>{{profile.name}}</h2>
-        <p>{{profile.user.email}}}</p>
+        <p>{{profile.user.email}}</p>
         <p>Employee Id: {{profile.employeedId}}</p>
       </div>
     </div>
