--- a/src/app/pages/employee/index/index.component.html
+++ b/src/app/pages/employee/index/index.component.html
@@ -35,73 +35,6 @@
       </div>
     </div>
   </div>
-  <div
-    *ngIf="dailyUpdates.length !== 0"
-    class="daily-updates"
-  >
-    <h2 class="heading">Daily Updates</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Description</th>
-          <th>Duration</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let update of dailyUpdates">
-          <td>{{update.date}}</td>
-          <td>{{update.description}}</td>
-          <td>{{update.duration}}</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="daily-update">
-    <h2 class="heading">
-      {{!todaysUpdate.description ? 'Give' : 'Edit' }} Daily Update
-    </h2>
-    <form
-      name="dailyUpdateForm"
-      class="daily-update-form"
-      (ngSubmit)="dailyUpdateForm.form.valid && postTodaysUpdate(dailyUpdateForm.value)"
-      #dailyUpdateForm="ngForm"
-      novalidate
-    >
-      <div class="row">
-        <h4>Description</h4>
-        <div class="input-div">
-          <input
-            type="text"
-            name="description"
-            placeholder="Description"
-            [ngModel]="todaysUpdate.description"
-            required
-          />
-        </div>
-      </div>
-      <div class="row">
-        <h4>Duration (in hours)</h4>
-        <div class="input-div">
-          <input
-            type="number"
-            name="duration"
-            placeholder="Duration (in hours)"
-            [ngModel]="todaysUpdate.duration"
-            required
-          />
-        </div>
-      </div>
-        <div
-          class="alert alert-danger"
-          role="alert"
-          *ngIf="!dailyUpdateForm.form.valid && dailyUpdateForm.touched"
-        >
-          <p>All fields are required</p>
-        </div>
-      <div class="submit-button">
-        <input type="submit" />
-      </div>
-    </form>
-  </div>
 </div>
+<app-daily-updates-table></app-daily-updates-table>
+<app-daily-update-form></app-daily-update-form>
