Create edit project page for hr

--- a/src/app/pages/hr/index/index.component.html
+++ b/src/app/pages/hr/index/index.component.html
@@ -5,7 +5,7 @@
   <div class="project">
     <div class="project-head">
       <h2>Project Details</h2>
-      <a href="/hr/edit-project">Edit</a>
+      <a href="/hr/project/edit">Edit</a>
     </div>
     <div class="project-details">
       <div class="row">
@@ -27,7 +27,7 @@
     </div>
     <div class="links">
       <a href="/hr/project/employees">Project Employees</a>
-      <a href="/hr/project/add-employees">Add New Employees</a>
+      <a href="/hr/project/employees/new">Add New Employees</a>
     </div>
   </div>
 </div>
