Create employee daily updates page for hr

--- a/src/app/pages/hr/project-employees/project-employees.component.html
+++ b/src/app/pages/hr/project-employees/project-employees.component.html
@@ -22,7 +22,7 @@
         <td>{{employee.address}}</td>
         <td>{{employee.joiningDate}}</td>
         <td>
-          <a href="{{'/hr/project/employee/'+employee.user.id}}">
+          <a href="{{'/hr/project/employee/'+employee.user.id+'/daily-updates'}}">
             View
           </a>
         </td>
